@@ -37,7 +37,7 @@ restore_command=
 restore_directories=
 
 # Restore mutations created up to and including this timestamp in GMT.
-# Format: yyyy:MM:dd HH:mm:ss (2012:04:31 20:43:12)
+# Format: yyyy:MM:dd HH:mm:ss[.SSS] (2012:04:31 20:43:12 or 2012:04:31 20:43:12.123)
 #
 # Recovery will continue through the segment when the first client-supplied
 # timestamp greater than this time is encountered, but only mutations less than
